Legibility and mobile optimization - Tweaked some legibility settings - Card text shows on mobile by default, since user interaction is different on mobile - Issue #1 is now solved.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -375,7 +375,7 @@ main section article {
     left: 0;
     height: 100%;
     width: 100%;
-    opacity: 0.6;
+    opacity: 0.9;
     background-image: linear-gradient(180deg, rgba(0,0,0,10%),50%, rgba(0,0,0,20%), 70%, rgba(0,0,0,100%));
 }
 
@@ -531,6 +531,14 @@ main section article {
 @media (max-width: 850px) {
     .categories-item-text {
         text-align: center;
+    }
+
+    /* Show card text by default on mobile because of user interaction is limited */
+    .categories-item-text {
+        top: 70%;
+    }
+    .categories-item-details{
+        opacity: 1;
     }
 }
 
